--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     >
       <a-nft
         type="nft"
-        url="./assets/N-box"
+        url="./assets/wellness"
         emitevents="true"
         smooth="true"
         smoothcount="15"
